@@ -23,7 +23,6 @@ filebeat.prospectors:
   close_renamed: {{close_renamed}}
   close_eof: {{close_eof}}
   close_timeout: {{close_timeout}}
-  force_close_files: {{force_close_files}}
   clean_inactive: {{clean_inactive}}
   clean_removed: {{clean_removed}}
   harvester_limit: {{harvester_limit | default(0) }}
