@@ -23,6 +23,7 @@ https://github.com/elastic/beats/compare/v5.1.1...master[Check the HEAD diff]
 *Filebeat*
 - Always use absolute path for event and registry. This can lead to issues when relative paths were used before. {pull}3328[3328]
 - Remove code to convert states from 1.x. {pull}3767[3767]
+- Remove deprecated config options force_close_files and close_older. {pull}3768[3768]
 
 *Heartbeat*
 
